# claudestate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
claudestate/: __init__.py  ai.py  budget.py  claudestate-hook.py  cli.py  state.py  templates.py
docs/: claude-settings-template.json
examples/rust-project/: STATE.md
go-companion/: claudestate-go.go
rust-companion/: Cargo.toml
rust-companion/src/: main.rs
tests/: test_state.py
