[package]
name    = "claudestate-rs"
version = "0.1.0"
edition = "2021"
description = "Rust companion for ClaudeState — reads STATE.md and outputs JSON"
license = "MIT"

[[bin]]
name = "claudestate-rs"
path = "src/main.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
